# Netmiko-Automation

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  text.py
assets/: patterns_collection.py  text_file.py  text_style.py
automation/: __init__.py
automation/authentication/: __init__.py  authentication.py  common_authentication.py
automation/components/: __init__.py
automation/depen_container/: depen_container.py
automation/device_connection/: __init__.py  device_connection.py
automation/menus/: Multiple_device_connection.py  __init__.py  connection_type.py  connection_type_menu.py  main_menu.py  menu_utils.py  script_menu.py  temp  temp1.py  test.py  testingpurpose.py
automation/user_validation/: __init__.py  user_validation.py
device_backup/: Today_Backup_20241004-082525.txt
env/: pyvenv.cfg
env/Scripts/: activate  (+1 more)
menus/: __init__.py  clearscreen.py  connection_type_menu.py  main_menu.py  menu_utils.py  scripts_menu.py
result/: File_Output_2024-09-10 11:13:45.txt  File_Output_2024-09-10 11:15:53.txt  File_Output_2024-09-10 11:22:12.txt  File_Output_2024-09-10 11:43:42.txt  File_Output_2024-09-11 10:55:05.txt  File_Output_2024-09-11 14:00:08.txt  File_Output_2024-09-11 14:53:16.txt  File_Output_2024-09-12 09_57_11.txt  File_Output_2024-09-12 10_57_29.txt  File_Output_2024-09-12 11:00:10.txt  File_Output_2024-09-12 11_08_56.txt  File_Output_2024-09-12 11_12_15.txt  File_Output_2024-09-12 11_57_29.txt  File_Output_2024-09-12 12:39:12.txt
state/: __init__.py  global_State_Manger.py
test/: test1.py  test2.py
(+24 files in other folders)
