[tool.poetry]
name = "netmiko-automation"
version = "0.1.0"
description = ""
authors = ["Surendra <surendrasinghtanwar667@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
netmiko = "^4.4.0"
cryptography = "^43.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
