[tool.poetry]
name = "netmiko-automation"
version = "0.1.0"
description = ""
authors = ["Surendra <surendrasinghtanwar667@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
netmiko = "^4.4.0"
cryptography = "^43.0.1"
pyping = "^0.0.6"
tabulate = "^0.9.0"
maskpass = "^0.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
